Efetuando validações e organizando o código

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<tr class="paciente">
 						<td class="info-nome">Michele</td>
 						<td class="info-peso">46</td>
-						<td class="info-altura">1.55</td>
+						<td class="info-altura">1.63</td>
 						<td class="info-gordura">19</td>
 						<td class="info-imc">0</td>
 					</tr>
@@ -76,6 +76,7 @@
 	</main>
 	<section class="container">
 		<h2 id="titulo-form">Adicionar novo paciente </h2>
+		<ul id="mensagens-erro"></ul>
 		<form id="form-adiciona">
 			<div class="grupo">
 				<label for="nome">Nome:</label>
