--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<main>
 		<section class="container">
 			<h2>Meus pacientes</h2>
+			<label for="filtrar-tabela">Filtro:</label>
+			<input type="text" name="Filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
 			<table>
 				<thead>
 					<tr>
@@ -101,7 +103,8 @@
 
 	<script src="js/calcula-imc.js"></script>
 	<script src="js/form.js"></script>
-	
+	<script src="js/remover-paciente.js"></script>
+	<script src="js/filtra.js"></script>
 	
 
 </body>
