--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 					</tr>
 				</tbody>
 			</table>
-
+			<span id="erro-ajax" class="invisivel">Erro ao Buscar Pacientes </span>
+			<button id="buscar-paciente" class="bto-principal">Buscar Paciente</button>
 		</section>
 	</main>
 	<section class="container">
@@ -105,6 +106,7 @@
 	<script src="js/form.js"></script>
 	<script src="js/remover-paciente.js"></script>
 	<script src="js/filtra.js"></script>
+	<script src="js/buscar-paciente.js"></script>
 	
 
 </body>
